<resources>
    <string name="app_name">دفترچه حساب</string>

    <string name="errMyket"> را نصب کنید ! </string>
    <string name="share">اشتراک گذاری</string>
    <string name="share_to_people">معرفی برنامه</string>
    <string name="rating_us">ارسال نظر</string>
    <string name="add">اضافه کردن</string>
    <string name="sort">مرتب سازی</string>
    <string name="add_amount">اضافه کردن مبلغ</string>
    <string name="add_card">اضافه کردن کارت بانکی</string>
    <string name="paid_on">پرداخت شده در : </string>
    <string name="filters">فیلتر کردن</string>
    <string name="change_image_profile">تغییر عکس پروفایل</string>
    <string name="delete_image">حذف عکس</string>
    <string name="message_select_image">برای تغییر وضعیت عکس یکی از گزینه های زیر را انتخاب کنید</string>
    <string name="message_edit_account">آیا اطلاعات حساب ویرایش شود؟</string>
    <string name="status">وضعیت</string>
    <string name="mobile_number">شماره موبایل</string>
    <string name="phone_number">شماره تلفن ثابت</string>
    <string name="delete_filters">حذف فیلتر ها</string>
    <string name="clear_form">پاک کردن فرم</string>
    <string name="apply">اعمال کردن</string>
    <string name="create_account">ساخت حساب</string>
    <string name="edit_account">ویرایش حساب</string>
    <string name="edit_all_information_account">ویرایش کلی حساب</string>
    <string name="edit_amount">ویرایش مبلغ</string>
    <string name="edit_card">ویرایش کارت</string>
    <string name="new_account">حساب جدید</string>
    <string name="settings">تنظیمات</string>
    <string name="not_found_result">نتیجه‌ای یافت نشد</string>
    <string name="list_is_empty">لیست خالی می‌باشد!\nبرای اضافه کردن حساب جدید دکمه ( + اضافه کردن ) را بفشارید</string>
    <string name="err_max_video_length">حداکثر حجم فیلم انتخابی باید زیر %d مگابایت باشد</string>
    <string name="father_name">نام پدر</string>
    <string name="address">آدرس</string>
    <string name="amount">مبلغ</string>
    <string name="bank_card">کارت بانکی</string>
    <string name="all_bank_cards">همه کارت‌های بانکی</string>
    <string name="card_holder_name">نام صاحب کارت</string>
    <string name="bank_name">نام بانک</string>
    <string name="card_number">شماره کارت</string>
    <string name="account_number">شماره حساب</string>
    <string name="shaba_number_ir">شماره شبا ( بدون IR )</string>
    <string name="shaba_number">شماره شبا</string>
    <string name="amount_tmn">مبلغ ( تومان )</string>
    <string name="message_call">برای تماس شماره را انتخاب کنید</string>
    <string name="message_clear_account">آیا تمام بدهی پرداخت شده و قصد تسویه کردن این حساب را دارید؟</string>
    <string name="message_delete_account">آیا قصد حذف کردن این حساب را دارید؟</string>
    <string name="page_number">شماره صفحه</string>
    <string name="message_help_page_number">ممکن است علاوه بر ذخیره اطلاعات خود در این برنامه، آنها را در یک دفتر به صورت مکتوب نوشته باشید، شما می‌توانید شماره صفحه دفتر مرتبط با این حساب را در اینجا وارد کنید تا راحت به آن اطلاعات دسترسی پیدا کنید</string>
    <string name="message_help_date">در اینجا می‌توانید یک تاریخ به صورت دستی مشخص کنید، در غیر این صورت ( تاریخ ساخت حساب ) به صورت خودکار تاریخ لحظه ساخت حساب در نظر گرفته می‌شود</string>
    <string name="message_help_amount_date">در اینجا می‌توانید یک تاریخ به صورت دستی مشخص کنید، در غیر این صورت ( تاریخ ورود مبلغ ) به صورت خودکار تاریخ لحظه ساخت مبلغ در نظر گرفته می‌شود</string>
    <string name="message_help_paid">پرداخت شده ( مقدار مبلغی که جهت تسویه داده شده )</string>
    <string name="message_change_password">آیا رمز عبور جدید وارد شده جایگزین رمز عبور قدیمی شود؟</string>
    <string name="message_success_save_password">تغییر رمز عبور با موفقیت انجام شد</string>
    <string name="message_change_username">آیا نام و نام خانوادگی وارد شده جایگزین شود؟</string>
    <string name="message_help_debtor">از این شخص طلبکار هستم</string>
    <string name="message_help_creditor">به این شخص بدهکار هستم</string>
    <string name="message_help_backup">با پشتیبان‌گیری از اطلاعات می‌توانید تمامی اطلاعات و داده‌های وارد شده را در حافظه دستگاه خود ذخیره کنید</string>
    <string name="message_help_restore_backup">اطلاعات از قبل پشتیبان‌گیری شده را بازگردانید</string>
    <string name="message_help_prevent_uninstall_app">با فعال کردن این گزینه از حذف ناگهانی این برنامه جلوگیری کنید</string>
    <string name="message_help_fingerprint">با فعال کردن این گزینه شیوه امنیت ورود شما با اثر انگشت انجام میشود</string>
    <string name="date_create_account">تاریخ ساخت حساب</string>
    <string name="date_amount">تاریخ ورود مبلغ</string>
    <string name="description">توضیحات</string>
    <string name="search">جستحو بر اساس نام و نام پدر</string>
    <string name="relate_to_us">ارتباط با ما</string>
    <string name="date_from">از تاریخ</string>
    <string name="date_to">تا تاریخ</string>
    <string name="speak">حرف بزن…</string>
    <string name="err_password">رمز وارد شده اشتباهه</string>
    <string name="login">ورود</string>
    <string name="clear">پاک</string>
    <string name="debtor">بدهکار</string>
    <string name="debtor_">بدهکار می‌باشد</string>
    <string name="creditor">طلبکار</string>
    <string name="creditor_">طلبکار می‌باشد</string>
    <string name="debtor_clearing">بدهکار بوده / تسویه‌شده</string>
    <string name="creditor_clearing">طلبکار بوده / تسویه‌شده</string>
    <string name="clearing">تسویه‌شده</string>
    <string name="clear_account">تسویه کردن حساب</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="change_password2">تغییر رمز</string>
    <string name="change_name_family_name">تغییر نام و نام خانوادگی</string>
    <string name="change_name">تغییر نام</string>
    <string name="data_backup">پشتیبان‌گیری از اطلاعات</string>
    <string name="prevent_uninstall_app">جلوگیری از حذف برنامه</string>
    <string name="login_fingerprint">ورود با اثر انگشت</string>
    <string name="description_fingerprint">لطفا انگشت خود را در جایگاه اثر انگشت قرار دهید</string>
    <string name="description_fingerprint_successful">ورود با موفقیت انجام شد</string>
    <string name="description_fingerprint_failed">ورود ناموفق</string>
    <string name="description_fingerprint_err">خطا در شناسایی اثر انگشت\n%s</string>
    <string name="description_fingerprint_help">راهنمایی در اثر انگشت\n%s</string>
    <string name="backup">پشتیبان‌گیری</string>
    <string name="restore_backup">بازیابی</string>
    <string name="not_found_restore_backup">فایلی برای بازیابی یافت نشد</string>
    <string name="edit">ویرایش کردن</string>
    <string name="call">تماس گرفتن</string>
    <string name="delete">حذف کردن</string>
    <string name="delete_account">حذف کردن حساب</string>
    <string name="select_image">انتخاب عکس</string>
    <string name="select_video">انتخاب فیلم</string>
    <string name="select_image_video">انتخاب عکس، فیلم</string>
    <string name="choose_image_profile">انتخاب عکس پروفایل</string>
    <string name="all_amount_debtor">جمع کل طلب‌ها</string>
    <string name="all_amount_creditor">جمع کل بدهی‌ها</string>
    <string name="all_amount_clearing">جمع کل تسویه شده‌ها</string>
    <string name="all">همه</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="password">رمز عبور</string>
    <string name="login_password">ورود با رمز عبور</string>
    <string name="gallery">گالری</string>
    <string name="all_Videos">همه فیلم‌ها</string>
    <string name="all_media">همه رسانه‌ها</string>
    <string name="err_permission_storage">"بدون مجوز، قادر به نمایش گالری نخواهید بود"</string>
    <string name="file_not_exists">فایل موجود نیست</string>
    <string name="name">نام، نام خوانوادگی</string>
    <string name="err_insert_account_name">لطفا نام، نام خوانوادگی را وارد کنید</string>
    <string name="err_account_name">نام، نام خوانوادگی باید بیشتر از 3 حرف باشد</string>
    <string name="err_mobile">لطفا شماره موبایل را صحیح وارد کنید</string>
    <string name="err_phone">لطفا شماره تلفن ثابت را صحیح وارد کنید</string>
    <string name="err_insert_number">حداقل یک شماره برای تماس وارد کنید</string>
    <string name="err_select_type">لطفا نوع حساب را مشخص کنید</string>
    <string name="err_insert_amount">مبلغ را وارد کنید</string>
    <string name="err_fingerprint_hardware_detected">دستگاه شما قابلیت ورود با اثر انگشت را ندارد</string>
    <string name="install_bazaar">لطفا اپلیکیشن بازار را نصب کنید !</string>
    <string name="install_my_ket">لطفا اپلیکیشن مایکت را نصب کنید !</string>
    <string name="install_iran_apps">لطفا اپلیکیشن ایران آپس را نصب کنید !</string>
    <string name="install_google_play">لطفا اپلیکیشن گوگل پلی را نصب کنید !</string>
    <string name="install_galaxy_samsung">لطفا اپلیکیشن فروشگاه گالکسی را نصب کنید !</string>
    <string name="err_rating">شما قادر به نظر گذاشتن نیستید !</string>
    <string name="re_password">تکرار رمز عبور</string>
    <string name="download_link_copied">لینک دانلود کپی شد</string>
    <string name="err_9_length_password">فقط 9 رقم قابل قبول است</string>
    <string name="err_length_password">رمز باید بین 4 تا 9 رقم باشه</string>
    <string name="err_equals_password">رمز های ورودی با هم برار نیستند</string>
    <string name="login_is_success">ورود با موفقیت انجام شد</string>
    <string name="message_err_name">نام باید بیشتر از 3 کاراکتر باشه</string>
    <string name="message_success_save_name">تغییر نام با موفقیت انجام شد</string>
    <string name="message_failed_backup">مشکل در پشتیبان‌گیری</string>
    <string name="message_success_backup">پشتیبان‌گیری با موفقیت انجام شد</string>
    <string name="message_success_restore_backup">بازیابی با موفقیت انجام شد</string>
    <string name="message_permission_restore_backup">توجه! در صورت بازیابی کردن، تمامی اطلاعات کنونی برنامه حذف خواهد شد و اطلاعات مربوط به فایل پشتیبانی جایگزین می شود! آیا بازیابی انجام شود؟</string>
    <string name="message_permission_backup">آیا قصد پشتیبان‌گیری از اطلاعات را دارید؟</string>
    <string name="message_prevent_uninstall_app">با فعال سازی این گزینه، می توانید از حذف شدن ناگهانی برنامه و پاک شدن اطلاعات برنامه جلوگیری کنید!</string>
    <string name="choose_contact">انتخاب از مخاطبین</string>
    <string name="submit">ثبت</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>

</resources>
